WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260711
[GStreamer] registerAppsinkWithWorkaroundsIfNeededCallOnce() should be callable from non-main threads
https://bugs.webkit.org/show_bug.cgi?id=260711
Summary
[GStreamer] registerAppsinkWithWorkaroundsIfNeededCallOnce() should be callab...
Philippe Normand
Reported
2023-08-25 06:47:18 PDT
There is an ASSERT(isMainThread()) there but I see no motivation for this. Care to explain, Alicia? This code might be triggered from worker threads in during WebCodecs initialization, that's why imported/w3c/web-platform-tests/webcodecs/video-decoder.crossOriginIsolated.https.any.worker.html crashes in Debug bots...
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-08-25 07:09:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17069
EWS
Comment 2
2023-09-01 07:24:59 PDT
Committed
267550@main
(c760465095dd): <
https://commits.webkit.org/267550@main
> Reviewed commits have been landed. Closing PR #17069 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-09-01 07:26:14 PDT
<
rdar://problem/114819848
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug