[GStreamer] registerAppsinkWithWorkaroundsIfNeededCallOnce() should be callable from non-main threads https://bugs.webkit.org/show_bug.cgi?id=260711

Reviewed by Alicia Boya Garcia.

Remove un-needed ASSERT, nothing should prevent to call gst_element_register() from a non-main thread.

* Source/WebCore/platform/AudioDecoder.cpp:
(WebCore::AudioDecoder::isCodecSupported):
* Source/WebCore/platform/graphics/gstreamer/GStreamerSinksWorkarounds.cpp:
(WebCore::registerAppsinkWithWorkaroundsIfNeededCallOnce):

Canonical link: https://commits.webkit.org/267550@main